Implementar gestión de solicitudes de secciones